<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalcWidget</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>    
    <string name="div">\u00f7</string>
    <string name="mul">\u00d7</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="ac">AC</string>
    
    <string name="display_default_value">0</string>
    
     <string name="error">Error</string>
</resources>
