<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    >
    
    <!-- 第1行 -->
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        >
		<Button 
	        android:id="@+id/ac"
	        android:text="@string/ac"
	       	style="@style/button_fun_style"
	        />
	    <Button 
	        android:id="@+id/div"
	        android:text="@string/div"
	       	style="@style/button_fun_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/mul"
	        android:text="@string/mul"
	       	style="@style/button_fun_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/del"
	       	style="@style/button_del_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
    </LinearLayout>
    
    <!-- 第2行 -->
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/pad_row_margin_size"
        >
	    <Button 
	        android:id="@+id/digit7"
	        android:text="@string/digit7"
	       	style="@style/button_digit_style"
	        />
	    <Button 
	        android:id="@+id/digit8"
	        android:text="@string/digit8"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/digit9"
	        android:text="@string/digit9"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/minus"
	        android:text="@string/minus"
	       	style="@style/button_fun_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	   </LinearLayout>
	   
    <!-- 第3行 -->
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/pad_row_margin_size"
        >
	    <Button 
	        android:id="@+id/digit4"
	        android:text="@string/digit4"
	       	style="@style/button_digit_style"
	        />
	    <Button 
	        android:id="@+id/digit5"
	        android:text="@string/digit5"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/digit6"
	        android:text="@string/digit6"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/plus"
	        android:text="@string/plus"
	       	style="@style/button_fun_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	   </LinearLayout>
	   
    <!-- 第4行 -->
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/pad_row_margin_size"
        >
	    <Button 
	        android:id="@+id/digit1"
	        android:text="@string/digit1"
	       	style="@style/button_digit_style"
	        />
	    <Button 
	        android:id="@+id/digit2"
	        android:text="@string/digit2"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"	       	
	        />
	    <Button 
	        android:id="@+id/digit3"
	        android:text="@string/digit3"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/dot"
	        android:text="@string/dot"
	       	style="@style/button_fun_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	   </LinearLayout>
	
    <!-- 第5行 -->
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/pad_row_margin_size"
        >
	    <Button 
	        android:id="@+id/digit0"
	        android:text="@string/digit0"
	       	style="@style/button_digit_style"
	        />
	    <Button 
	        android:id="@+id/bracket_left"
	        android:text="@string/bracket_left"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/bracket_right"
	        android:text="@string/bracket_right"
	       	style="@style/button_digit_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	    <Button 
	        android:id="@+id/equal"
	        android:text="@string/equal"
	       	style="@style/button_equals_style"
	       	android:layout_marginLeft="@dimen/pad_column_margin_size"
	        />
	</LinearLayout>
</LinearLayout>    